# machinekit-legacy-ui

./: .gitignore  CMakeLists.txt  README.md
axis/: CMakeLists.txt
axis/scripts/: axis.py  hal_manualtoolchange.py  lintini.py  linuxcnctop.py  mdi.py
gmoccapy/: CMakeLists.txt
gremlin/: CMakeLists.txt
gscreen/: CMakeLists.txt
pncconf/: CMakeLists.txt
stepconf/: CMakeLists.txt  stepconf.py
touchy/: CMakeLists.txt  touchy.py
